Admin side modals done

--- a/storeadmin/templates/storeadmin/categoryoffer/categoryoffer.html
+++ b/storeadmin/templates/storeadmin/categoryoffer/categoryoffer.html
@@ -24,7 +24,7 @@
     </form>
   
   </div>
-  
+
   <div class="row justify-content-end">
     <a href="{% url 'addcategoryoffer' %}">
       <button class="btn add-category-btn btn-primary mt-2">Add Offer</button>
@@ -76,6 +76,47 @@
 </div>
 
 
+{% comment %} DELETE MODAL {% endcomment %}
+ 
+<div style="margin-top:100px;" class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="cancelModalLabel" aria-hidden="true">
+ 
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="cancelModalLabel">Confirm Order Cancellation</h5>
+        <button type="button" class="close closeit" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Are you sure you want to delete?</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary closeit" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-danger closeit" data-dismiss="modal" id="deleteconfirm">Confirm</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
 {% comment %} <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>
 
@@ -101,40 +142,101 @@
 });   {% endcomment %}
   
  
- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+ {% comment %} <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> {% endcomment %}
  <script>
   $(document).ready(function() {
       $(".delete-btn").click(function() {
         var offerid = $(this).data("category-id");
+        
+        $("#deleteModal").modal("show");
+        $("#deleteconfirm").click(function(){
+          
           // Get the selected offer value
         
         // Send an AJAX request to update the offer price
-        $.ajax({
-          url: "../deletecategoryoffer/" + offerid, // Replace with the URL of your Django view
-          type: "GET",
-          data: { offer: offerid,
-                  
-                  
-              },
-          success: function(response) {
-            $("#offer" + offerid).remove();
-            // Update the offer price on the page
-            var newOfferPrice = response.message;  // Assuming the response contains the updated offer price
-            // Update the appropriate HTML element with the new offer price
-            //$("#offer_price").text(newOfferPrice);
-            alert(response.message);
-          },
-          error: function(xhr, errmsg, err) {
-            // Handle any errors that occur during the AJAX request
-            console.log(xhr.status + ": " + xhr.responseText);
-          }
-        });
+          $.ajax({
+            url: "../deletecategoryoffer/" + offerid, // Replace with the URL of your Django view
+            type: "GET",
+            data: { offer: offerid,
+                    
+                    
+                },
+            success: function(response) {
+              $("#offer" + offerid).remove();
+              // Update the offer price on the page
+              var newOfferPrice = response.message;  // Assuming the response contains the updated offer price
+              // Update the appropriate HTML element with the new offer price
+              //$("#offer_price").text(newOfferPrice);
+              
+            },
+            error: function(xhr, errmsg, err) {
+              // Handle any errors that occur during the AJAX request
+              console.log(xhr.status + ": " + xhr.responseText);
+            }
+          });       
+        })
+        
       });
+      $(".closeit").click(function(){
+        $("#deleteModal").modal("hide");
+       })
     });
-  </script>
+  </script> 
   
   
-  
+
+
+  {% comment %} <script>
+    $(document).ready(function() {
+        $(".delete-btn").click(function() {
+          var orderid = $(this).data("category-id");
+            // Get the selected offer value
+          
+           $("#cancelModal").modal("show");
+           
+           $("#confirmcancel").click(function(){
+             $.ajax({
+               url: "../cancelorder/" + orderid, // Replace with the URL of your Django view
+               type: "GET",
+               data: { offer: orderid,
+                       
+                       
+                   },
+               success: function(response) {
+                 //$("#offer" + orderid).remove();
+                 // Update the offer price on the page
+                 var content = response.content;  // Assuming the response contains the updated offer price
+                 // Update the appropriate HTML element with the new offer price
+                 $("#orderitem" + orderid).text("Cancelled").addClass("text-danger");;
+                 
+               },
+               error: function(xhr, errmsg, err) {
+                 // Handle any errors that occur during the AJAX request
+                 console.log(xhr.status + ": " + xhr.responseText);
+               }
+             });
+
+
+
+
+
+
+
+
+
+           })
+          // Send an AJAX request to update the offer price
+      
+        });
+
+        $(".closeit").click(function(){
+         $("#cancelModal").modal("hide");
+        })
+
+
+
+      });
+    </script> {% endcomment %}
   
   
   
