--- a/storeadmin/templates/storeadmin/categories/categories.html
+++ b/storeadmin/templates/storeadmin/categories/categories.html
@@ -57,21 +57,35 @@
           </td>
           <td class="py-1">
           
-            {% if item.isblocked %}
+             {% if item.isblocked %} 
+           
+              <a href={% url 'admin_blockcategories' item.id %}>
 
-              <button  type="button " class="btn delete-btn btn-success" data-category-id="{{ item.id }}">Unblock</button>
+                <button id="blockbutton1{{item.id}}"   type="button " class="btn delete-btn btn-success blockbtn{{item.id}}" data-category-id="{{ item.id }}">Unblock</button>
+
+
+              </a>
+              
 
               
             
-            {% endif %}  
+             {% endif %}  
 
             {% if not item.isblocked %}
 
-            <button  type="button" class="btn delete-btn btn-danger" data-category-id="{{ item.id }}">Block</button>
+            <a href={% url 'admin_blockcategories' item.id %}>
+
+              <button id="blockbutton2{{item.id}}"    type="button" class="btn delete-btn btn-danger blockbtn{{item.id}}" data-category-id="{{ item.id }}">Block</button>
+            
+
+
+
+            </a>
+
             
             
             
-            {% endif %}
+            {% endif %} 
             
 
             
@@ -90,7 +104,36 @@
 </div>
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<div id="mone">
+  Onnula
+
+</div>
+
+{% comment %} DELETE MODAL {% endcomment %}
+ 
+<div style="margin-top:100px;" class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="cancelModalLabel" aria-hidden="true">
+ 
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="cancelModalLabel">Confirm Order Cancellation</h5>
+        <button type="button" class="close closeit" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Are you sure you want to delete?</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary closeit" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-danger closeit" data-dismiss="modal" id="deleteconfirm">Confirm</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+{% comment %} <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>
 
   $(".delete-btn").click(function() {
@@ -113,10 +156,111 @@
         });
     }
 });  
+</script>
+   {% endcomment %}
   
-  
-  
-  
+
+
+{% comment %} <script>
+  $(document).ready(function() {
+      $(".delete-btn").click(function() {
+        
+        var categoryid = $(this).data("category-id");
+        
+        $("#deleteModal").modal("show");
+        $("#deleteconfirm").click(function(){
+          
+          // Get the selected offer value
+        
+        // Send an AJAX request to update the offer price
+          $.ajax({
+            url: "../blockcategories/" ,// Replace with the URL of your Django view
+            type: "GET",
+            data: { categoryid:categoryid,
+                    
+                    
+                },
+            success: function(response) {
+              
+              // Update the offer price on the page
+               // Assuming the response contains the updated offer price
+              // Update the appropriate HTML element with the new offer price
+              //$("#offer_price").text(newOfferPrice);
+              if(response.message=="Unblocked"){
+                $(".blockbtn"+categoryid).text("Unblocked")
+              }
+              else if(response.message=="Blocked"){
+                $(".blockbtn"+categoryid).text("Blocked")
+
+              }
+              
+              $("#blockbutton1"+categoryid).text("Unblocked")
+              $("#blockbutton1"+categoryid).addClass("btn-success")
+              $("#mone").text("HELLO");
+
+            
+             
+              
+            },
+            error: function(xhr, errmsg, err) {
+              // Handle any errors that occur during the AJAX request
+              console.log(xhr.status + ": " + xhr.responseText);
+            }
+          });       
+        })
+        
+      });
+      $(".closeit").click(function(){
+        $("#deleteModal").modal("hide");
+       })
+    });
+  </script>  {% endcomment %}
+
+
+  {% comment %} <script>
+    $(document).ready(function() {
+        $(".delete-btntwo").click(function() {
+          var categoryid = $(this).data("category-id");
+          
+          $("#deleteModal").modal("show");
+          $("#deleteconfirm").click(function(){
+            
+            // Get the selected offer value
+          
+          // Send an AJAX request to update the offer price
+            $.ajax({
+              url: "../blockcategories/", // Replace with the URL of your Django view
+              type: "GET",
+              data: { categoryid:categoryid,
+                      
+                      
+                  },
+              success: function(response) {
+                
+                // Update the offer price on the page
+                  // Assuming the response contains the updated offer price
+                // Update the appropriate HTML element with the new offer price
+                //$("#offer_price").text(newOfferPrice);
+                $("#blockbutton2"+categoryid).text("Blocked")
+                $("#blockbutton2"+categoryid).addClass("btn-danger")
+                $("#mone").html("HELLO");
+              
+               
+                
+              },
+              error: function(xhr, errmsg, err) {
+                // Handle any errors that occur during the AJAX request
+                console.log(xhr.status + ": " + xhr.responseText);
+              }
+            });       
+          })
+          
+        });
+        $(".closeit").click(function(){
+          $("#deleteModal").modal("hide");
+         })
+      });
+    </script>  {% endcomment %}
   
   
   
@@ -192,7 +336,7 @@
 }); {% endcomment %}
 
 
-</script>
+
 {% comment %} <div>
   <div class="row  justify-content-end">
     <a href={% url 'admin_addcategories' %}><button>Add Category</button></a>
