--- a/storeadmin/templates/storeadmin/index.html
+++ b/storeadmin/templates/storeadmin/index.html
@@ -26,6 +26,21 @@
   <!-- endinject -->
   <link rel="shortcut icon" href="{% static 'storeadmin/images/favicon.png' %}"   />
 
+  <!-- Bootstrap JavaScript old version -->
+	 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>  --> 
+
+
+   
+
+    <!-- Ajax -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
+   <!-- Bootstrap JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>  
+
+
+
+  
+
   
 
   
@@ -1209,6 +1224,8 @@
     <!-- page-body-wrapper ends -->
   </div>
   <!-- container-scroller -->
+
+  
 
   <!-- plugins:js -->
   <script src="{% static 'storeadmin/vendors/js/vendor.bundle.base.js' %}"   ></script>
