--- a/storeadmin/templates/storeadmin/coupons/editcoupon.html
+++ b/storeadmin/templates/storeadmin/coupons/editcoupon.html
@@ -37,7 +37,7 @@
       <div>
 
         <label for="username">Is available</label>
-        <select name="isavailable" id="">
+        <select class="form-control" name="isavailable" id="">
             <option value="Yes">Yes</option>
             <option value="No">No</option>
           </select>
