--- a/storeadmin/templates/storeadmin/categoryoffer/editcategoryoffer.html
+++ b/storeadmin/templates/storeadmin/categoryoffer/editcategoryoffer.html
@@ -7,7 +7,7 @@
     <div class="form-group mt-2">
       {% comment %} {% for item in content  %} {% endcomment %}
       <label for="username">Category Name</label>
-      <select id="dropdown" name="categoryname">
+      <select class="form-control" id="dropdown" name="categoryname">
         {% for item in categoryobjs  %}
         <option value="{{item.name}}">{{item.name}}<br><br> </option>
         {% endfor %}
