--- a/store/templates/store/userdashboard/loggedin.html
+++ b/store/templates/store/userdashboard/loggedin.html
@@ -392,6 +392,18 @@
 						<a href={% url 'checkout' %}  class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-b-10">
 							Check Out
 						</a>
+						<div>
+							{{message }}
+						</div>
+						{% comment %} <div>
+							{% if messages %}
+								{% for message in messages %}
+									<div class="alert alert-danger" role="alert">
+										{{ message }}
+									</div>
+								{% endfor %}
+							{% endif %}
+						</div> {% endcomment %}
 					</div>
 					{% comment %} <div>
 						<a href={% url 'previousorders' %} class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-r-8 m-b-10">
