Order Placed page details updated for cash on delivery

--- a/store/templates/store/userdashboard/loggedinproduct.html
+++ b/store/templates/store/userdashboard/loggedinproduct.html
@@ -463,6 +463,7 @@
 				</div>
 			</div>
 			
+			
 			<div class="row isotope-grid">
 				{% for item in products  %}
 				
@@ -1222,6 +1223,7 @@
 				</a>
 			</div> {% endcomment %}
 		</div>
+		<br><br><br><br><br><br><br><br><br><br>
 	</div>
 	
 	{% comment %} <div class="flex-c-m flex-w w-full p-t-45">
@@ -1231,7 +1233,7 @@
 	</div> {% endcomment %}
 
 	<!-- Footer -->
-	<footer class="bg3 p-t-75 p-b-32">
+	<footer class=" bg3 p-t-75 p-b-32">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-6 col-lg-3 p-b-50">
@@ -1377,11 +1379,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 
 	<!-- Back to top -->
-	<div class="btn-back-to-top" id="myBtn">
+	{% comment %} <div class="btn-back-to-top" id="myBtn">
 		<span class="symbol-btn-back-to-top">
 			<i class="zmdi zmdi-chevron-up"></i>
 		</span>
-	</div>
+	</div> {% endcomment %}
 
 	<!-- Modal1 -->
 	{% comment %} <div class="wrap-modal1 js-modal1 p-t-60 p-b-20">
@@ -1537,13 +1539,13 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 		</div>
 	</div> {% endcomment %}
 
-	<div id="wishlistModal" class="modal">
+	{% comment %} <div id="wishlistModal" class="modal">
 		<div class="modal-content">
 		  <span class="close">&times;</span>
 		  <h2>Add to Wishlist</h2>
 		  <p>Item successfully added to your wishlist!</p>
 		</div>
-	</div>
+	</div> {% endcomment %}
 
 
 
