--- a/store/templates/store/userdashboard/orderplaced.html
+++ b/store/templates/store/userdashboard/orderplaced.html
@@ -6,14 +6,40 @@
 <div class="row mt-5"></div>
 <div class="row mt-5"></div>
 
-<div class="container">
+<div class="container-fluid">
     <div class="row">
-      <div class="col-md-12 text-center">
+      <div class="col-md-7 text-center">
         <span class="icon-check_circle display-3 text-success"></span>
-        <h2 class="display-3 text-black">Thank you!</h2>
-        <p class="lead mb-5">You order was successfuly completed.</p>
-        <p><a href={% url 'loggedinproduct' %} class="btn btn-sm btn-primary">Back to shop</a></p>
+        <h2 class=" text-black display-3  ">Thank you!</h2><br>
+        <p class="lead mb-5 text-success">You order was successfuly completed &#x2713;</p>
+        <p><a href={% url 'loggedinproduct' %} class="btn  stext-101 cl0 size-103 bg1 bor1 hov-btn2 p-lr-15 trans-04  mt-3">Back to shop</a></p>
       </div>
+
+      <div class="col-md-5">
+        <div class="card mt-4">
+          <div class="card-header">
+              <h2> <strong> Order Details</strong></h2>
+          </div>
+          <div class="card-body">
+            
+            {% for item,data in currentorder.items  %}
+            
+            
+              <p class="card-text"> <strong> Product:</strong> {{item}}</p>
+              <p class="card-text"><strong> Quantity:</strong>      {{data.quantity}}</p>
+              <p class="card-text"><strong> Order Date:</strong>  {{data.orderdate}}  </p>
+              <p class="card-text"><strong> Shipping Address:</strong>   {{data.address}} </p>
+              <p class="card-text"><strong>  Amount:</strong>  {{data.finalprice}}</p>
+              <br><br><hr>
+              {% endfor %}
+          </div>
+        </div>  
+
+
+
+
+
+
     </div>
   </div>
    
