Razor Pay Order placed done

--- a/store/templates/store/userdashboard/checkout.html
+++ b/store/templates/store/userdashboard/checkout.html
@@ -542,8 +542,8 @@ var options = {
 			success: function(data) {
 				// Handle the response from the server
 				// For example, you can display a success message or redirect to a new page
-				alert('Order updated successfully!');
-				//window.location.href = '/order-details'; // Redirect to the order details page
+				//alert('Order updated successfully!');
+				window.location.href = '../orderplaced/';
 			},
 			error: function(error) {
 				// Handle the error, if any
