--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -459,6 +459,12 @@
 
 
 	<!-- Banner -->
+	<div class="p-b-10 ">
+		<h3 class="ltext-103 cl5 mt-5 ml-5">
+			Category
+		</h3>
+	</div>
+	
 	<div class="sec-banner bg0 p-t-80 p-b-50">
 		<div class="container">
 			<div class="row">
